@@ -14,9 +14,11 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-download.file <- function(url, destfile, method,
-                          quiet = FALSE, mode = "w", cacheOK = TRUE)
+download.file <-
+    function(url, destfile, method, quiet = FALSE, mode = "w",
+             cacheOK = TRUE, extra = getOption("download.file.extra"))
 {
+    destfile # check supplied
     method <- if (missing(method))
         ifelse(!is.null(getOption("download.file.method")),
                getOption("download.file.method"),
@@ -43,16 +45,23 @@ download.file <- function(url, destfile, method,
     if(method == "internal")
         status <- .Internal(download(url, destfile, quiet, mode, cacheOK))
     else if(method == "wget") {
-        extra <- if(quiet) "--quiet" else ""
-        if(!cacheOK) extra <- paste(extra, "--cache=off")
-        status <- system(paste("wget", extra, shQuote(url),
+        if(quiet) extra <- c(extra, "--quiet")
+        if(!cacheOK) extra <- c(extra, "--cache=off")
+        status <- system(paste("wget",
+                               paste(extra, collapse = " "),
+                               shQuote(url),
                                "-O", shQuote(path.expand(destfile))))
     } else if(method == "curl") {
-        extra <- if(quiet) "-s -S" else ""
-        status <- system(paste("curl", extra, shQuote(url),
+        if(quiet) extra <- c(extra, "-s -S")
+        if(!cacheOK) extra <- c(extra, "-H 'Pragma: no-cache'")
+        status <- system(paste("curl",
+                               paste(extra, collapse = " "),
+                               shQuote(url),
                                " -o", shQuote(path.expand(destfile))))
     } else if(method == "lynx")
-        status <- shell(paste("lynx -dump", shQuote(url), ">",
+        status <- shell(paste("lynx -dump",
+                              paste(extra, collapse = " "),
+                              shQuote(url), ">",
                               shQuote(path.expand(destfile))))
 
     if(status > 0L)
